# train-test-splits

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  norton_script.sh  pyproject.toml  release.config.js  renovate.json  run_pipeline.sh
.github/workflows/: check.yml  deploy.yml
split_scripts/: ember_splits.py  norton_splits.py  split_dataset.py
split_scripts/motif/: motif_dataset.py  motif_splits.py
split_scripts/motif/analysis/: motif_truncated_analysis.ipynb
split_scripts/motif/utils/: best_split_utils.py
split_scripts/norton/: norton_splits.py
split_scripts/norton/dataset/: malware_dataset.py
splits/: split_dataset.py
splits/best_time_split/: best_split.py  config.py  malware_dataset.py
splits/motif/: motif_dataset.py  motif_splits.py
splits/motif/analysis/: best_motif_split.ipynb  motif_truncated_analysis.ipynb
splits/motif/utils/: best_split_utils.py
splits/norton/: norton_splits.py
splits/norton/best_time_split/: malware_dataset.py
splits/norton/dataset/: best_split.py  malware_dataset.py
