[tool.poetry]
name = "Train-Test-Splits-CDD__Wdis"
packages = [
    { include = "splits" },
]
version = "1.0.0"
description = "Train/Test Dataset Splits"
authors = ["Luca Fabri <luca.fabri1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.5.0"
numpy = "^2.2.6"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
scipy = "^1.15.3"
tqdm = "^4.67.1"


[tool.poe.tasks]
test = "pytest"
coverage = "coverage run -m pytest"
coverage-report = "coverage report -m"
coverage-html = "coverage html"
ruff-check = "ruff check"
ruff-fix = "ruff check --fix"
format = "ruff format"
format-check = "ruff format --check"
mypy = "mypy transcendent tests"
compile = "python -m compileall transcendent tests"
static-checks = [
    "ruff-check",
    "mypy",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
